--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,18 @@ services:
     networks:
       - laravel_network
 
-  mysql:
-    image: mysql:8.4
-    container_name: mysql_laravel_factory
+  postgres:
+    image: postgres
+    container_name: postgres_laravel_factory
     restart: unless-stopped
-    ports:
-      - 3306:3306
     environment:
-      - MYSQL_DATABASE=laravel_project
-      - MYSQL_ROOT_PASSWORD=password
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: laravel_project
+    ports:
+      - "5432:5432"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - laravel_network
   npm:
@@ -75,7 +76,7 @@ services:
     working_dir: /var/www/html
     entrypoint: ["php", "/var/www/html/artisan"]
     depends_on:
-      - mysql
+      - postgres
     networks:
       - laravel_network
   
@@ -84,7 +85,7 @@ volumes:
   storage:
   bootstrap_cache:
   vendor:
-  mysql_data:
+  postgres_data:
     driver: local
 
 networks:
